// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultipleFileUploadTitleTextSeparator > renders custom class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__title-text-separator test"
  >
    Foo
  </div>
</DocumentFragment>
`;

exports[`MultipleFileUploadTitleTextSeparator > renders with expected class names 1`] = `
<DocumentFragment>
  <div
    class="pf-v5-c-multiple-file-upload__title-text-separator"
  >
    Foo
  </div>
</DocumentFragment>
`;
